create auth handler

--- a/app.env
+++ b/app.env
@@ -4,3 +4,7 @@ db_user     = "postgres"
 db_password = "3018"
 db_dbname   = "synergy_dev"
 db_sslmode  = "disable"
+jwt_secret = "brown dog jumps over lazy fox"
+jwt_iss = "web-service-gin"
+jwt_aud = "https://localhost:43000"
+jwt_exp = 1
