update connect to rds & fix bug refresh_toen

--- a/app.env
+++ b/app.env
@@ -1,8 +1,8 @@
-db_host     = "127.0.0.1"
+db_host     = "synergy-dev.cioo1kbd0ezx.ap-southeast-1.rds.amazonaws.com"
 db_port     = "5432"
 db_user     = "postgres"
-db_password = "3018"
-db_dbname   = "synergy_dev"
+db_password = "synergy-dev"
+db_dbname   = "postgres"
 db_sslmode  = "disable"
 jwt_secret = "brown dog jumps over lazy fox"
 jwt_iss = "web-service-gin"
