get cors config from file env

--- a/app-dev.env
+++ b/app-dev.env
@@ -8,3 +8,6 @@ jwt_secret = "brown dog jumps over lazy fox"
 jwt_iss = "web-service-gin"
 jwt_aud = "https://localhost:43000"
 jwt_exp = 1
+cors_origin = "*"
+cors_method = "GET,POST,PUT,DELETE,OPTIONS"
+cors_header = "Origin,Content-Length,Content-Type,Authorization,X-Api-Key,X-Amz-Security-Token"
